--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "files.associations": {
     "vector": "cpp",
-    "xstring": "cpp"
+    "xstring": "cpp",
+    "utility": "cpp",
+    "iostream": "cpp",
+    "ostream": "cpp"
   }
 }
