--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,5 @@
 {
   "files.associations": {
-    "vector": "cpp",
-    "xstring": "cpp",
-    "utility": "cpp",
-    "iostream": "cpp",
-    "ostream": "cpp",
-    "algorithm": "cpp",
-    "iterator": "cpp",
-    "xmemory": "cpp",
-    "xtree": "cpp",
-    "xutility": "cpp",
-    "map": "cpp"
+    "vector": "cpp"
   }
 }
