--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "files.associations": {
-    "vector": "cpp"
+    "vector": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "xstring": "cpp",
+    "iostream": "cpp",
+    "ostream": "cpp"
   }
 }
